[package]
name = "capillary"
version = "0.4.1"
edition = "2021"
description = "Library for HashMap-like storage of key-value pairs, but allowing for step-by-step (partial) search of value."
repository = "https://github.com/nfejzic/capillary"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.2", default-features = false, features = [ "stable_graph" ]}
